<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="4">

                <TextView
                    android:id="@+id/new_topic_message"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_gravity="top|fill_horizontal"
                    android:layout_row="0"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="center"
                    android:text="@string/new_topic_message"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/new_topic_create_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="top|fill_horizontal"
                    android:layout_row="3"
                    android:background="@android:color/holo_blue_dark"
                    android:onClick="createNewTopic"
                    android:text="@string/create"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/new_topic_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_column="0"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_row="1"
                    android:contentDescription="@string/add_an_image"
                    android:maxHeight="150dp"
                    android:minHeight="100dp"
                    android:onClick="chooseImage"
                    android:scaleType="fitCenter"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

                <EditText
                    android:id="@+id/new_topic_topic_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="top|fill_horizontal"
                    android:layout_row="2"
                    android:ems="10"
                    android:hint="@string/topic_name_input_field"
                    android:inputType="textPersonName" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>

    <fragment
        android:name="com.example.messenger.MenuFragment"
        android:id="@+id/menu_create_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout="@layout/menu_fragment" />

</RelativeLayout>