<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_above="@+id/menu_chat"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="2"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/chat_input_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

            <Button
                android:id="@+id/chat_image_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:onClick="changeToMessageSending"
                android:text="@string/cancel"
                android:visibility="gone" />

            <EditText
                android:id="@+id/chat_input_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/message"
                android:inputType="textPersonName"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/chat_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:onClick="changeToImageSending"
            android:text="@string/image" />

        <Button
            android:id="@+id/chat_send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/send" />
    </LinearLayout>

    <fragment
        android:id="@+id/menu_chat"
        android:name="com.example.messenger.MenuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout="@layout/menu_fragment" />

    <ScrollView
        android:id="@+id/chat_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:id="@+id/chat_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>

</RelativeLayout>